# MinKV

./: .cppcheckignore  .gitignore  CMakeLists.txt  README.md  README_zh-CN.md
.github/config/: changes.yml
.github/workflows/: ci.yml  release.yml
docs/: PERFORMANCE_TESTING_REPORT.md
docs/tests/: 00_environment_setup.md  01_comprehensive_benchmark.md  02_wal_ab_test.md  03_shard_ablation.md  04_simd_comparison.md  05_simd_system_ab_test.md  06_cache_line_false_sharing.md  BENCHMARK_DATA_DISCREPANCY.md  RELEASE_BENCHMARK.md  comprehensive_benchmark.md  performance_engineering.md
mcp_server_go/: .env.example  README.md  README_zh.md  go.mod  main.go  mcp_handler.go  server.go  services.go  tools.go
scripts/: generate_charts.py
src/base/: append_file.cpp  append_file.h  async_logger.cpp  async_logger.h  expiration_manager.cpp  expiration_manager.h  group_commit.cpp  group_commit.h  serializer.h  singleton.h  singleton_example.h  thread_pool.h
src/core/: lru_cache.h  minkv.h  sds_string.h  sharded_cache.h  sharded_cache_vector_impl.cpp
src/db/: lockfree_cache.cpp  lockfree_cache.h  lru_cache.h  lru_cache_expiration.h  lru_cache_lazy.h  optimized_cache_node.h  optimized_lru_cache.h  sharded_cache.h  sharded_cache_v2.h  sharded_cache_with_expiration.h  snapshot.cpp  snapshot.h  vector_ops.h  wal.h
src/graph/: graph_serializer.cpp  graph_serializer.h  graph_store.cpp  graph_store.h  graph_types.h
src/persistence/: checkpoint_manager.h  group_commit.cpp  group_commit.h  wal.cpp  wal.h
src/server/: graph_http_server.cpp  http_server.cpp  http_server.h  httplib.h  resp_parser.cpp  resp_parser.h
src/tests/: async_logger_test.cpp  benchmark_false_sharing_focused.cpp  benchmark_vector.cpp  comprehensive_benchmark.cpp  demo_vector_db.cpp  example_wal_usage.cpp  group_commit_test.cpp  lsn_recovery_test.cpp  shard_ablation_quick.cpp  simd_comparison_simple.cpp  snapshot_test.cpp  test_vector_integration.cpp  wal_ab_test.cpp  wal_performance_benchmark.cpp
src/tests/bench/: benchmark_performance.cpp
src/tests/legacy/: benchmark_v2.cpp  benchmark_v3.cpp
src/tests/scripts/: plot_benchmark.py
src/tests/unit/: test_lockfree.cpp  test_lru.cpp  test_monitoring.cpp  test_stats.cpp  test_template_usage.cpp
src/vector/: vector_ops.h
tests/: async_logger_test.cpp  benchmark_final.cpp  benchmark_vector.cpp  data_consistency_test.cpp  example_wal_usage.cpp  expiration_exception_test.cpp  expiration_fast_wakeup_test.cpp  expiration_manager_validation_test.cpp  expiration_test.cpp  group_commit_test.cpp  lsn_correctness_test.cpp  lsn_simple_test.cpp  search_performance_benchmark.cpp  shard_analysis.cpp  shard_count_ablation.cpp  shard_uniformity_test.cpp  simd_checkpoint_verification.cpp  test_vector_integration.cpp  thread_join_verification_test.cpp  unified_cache_test.cpp  vector_value_test.cpp  wal_performance_benchmark.cpp
tests/graph/: demo_graphrag.cpp  test_graph_serializer.cpp  test_graph_store_phase1.cpp  test_graph_store_phase2.cpp  test_graphrag_accuracy.cpp  test_graphrag_batch_performance.cpp  test_mcp_simulation.cpp
tests/legacy/: benchmark.cpp  benchmark_false_sharing.cpp  benchmark_v2.cpp  benchmark_v3.cpp  benchmark_v4.cpp  benchmark_v5_final.cpp
tests/scripts/: plot_benchmark_ideal.py
tests/unit/: test_lru.cpp  test_parser.cpp  test_stats.cpp
